2014-05-21	SilverNexus
	* Initial commits. Setting up files for later use.